# SPDX-FileCopyrightText: 2024-2026 Cloudflare Inc., Luke Curley, Mike English and contributors
# SPDX-FileCopyrightText: 2023-2024 Luke Curley and contributors
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = [
	"moq-transport",
	"moq-relay-ietf",
	"moq-pub",
	"moq-sub",
	"moq-api",
	"moq-clock-ietf",
	"moq-native-ietf",
	"moq-catalog",
	"moq-test-client",
]
resolver = "2"

[workspace.dependencies]
web-transport = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Use debug symbols in production until things are more stable
[profile.release]
debug = true
