# SPDX-FileCopyrightText: 2024-2026 Cloudflare Inc., Luke Curley, Mike English and contributors
# SPDX-FileCopyrightText: 2023-2024 Luke Curley and contributors
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "moq-api"
description = "Media over QUIC"
authors = ["moq-rs contributors"]
repository = "https://github.com/cloudflare/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.2.9"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP server
axum = "0.7"
hyper = { version = "1.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON encoding
serde = "1"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
redis = { version = "0.32", features = [
	"tokio-rustls-comp",
	"connection-manager",
] }
url = { version = "2", features = ["serde"] }

# Error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "1"
