# SPDX-FileCopyrightText: 2024-2026 Cloudflare Inc., Luke Curley, Mike English and contributors
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "moq-clock-ietf"
description = "CLOCK over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/englishm/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.6.11"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-native-ietf = { path = "../moq-native-ietf", version = "0.7" }
moq-transport = { path = "../moq-transport", version = "0.14" }

# QUIC
url = "2"

# Async stuff
tokio = { version = "1", features = ["full"] }

# CLI, logging, error handling
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { version = "1", features = ["backtrace"] }

# CLOCK STUFF
chrono = "0.4"
