# SPDX-FileCopyrightText: 2024-2026 Cloudflare Inc., Luke Curley, Mike English and contributors
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "moq-native-ietf"
description = "Media over QUIC - Helper library for native applications"
authors = ["Luke Curley"]
repository = "https://github.com/englishm/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.7.4"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.14" }
web-transport = { workspace = true }
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }

rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rustls-native-certs = "0.7"
quinn = { version = "0.11.9", features = ["ring", "qlog"] }
ring = "0.17"
webpki = "0.22"

hex = "0.4"
url = "2"
rand = "0.8"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = { workspace = true }
