[package]
name = "moq-relay-ietf"
description = "Media over QUIC"
authors = ["Luke Curley", "Manish Kumar Pandit"]
repository = "https://github.com/cloudflare/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.7.13"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
name = "moq_relay_ietf"
path = "src/lib.rs"

[[bin]]
name = "moq-relay-ietf"
path = "src/bin/moq-relay-ietf/main.rs"

[dependencies]
moq-transport = { path = "../moq-transport", version = "0.14" }
moq-native-ietf = { path = "../moq-native-ietf", version = "0.7" }
moq-api = { path = "../moq-api", version = "0.2" }
web-transport = { workspace = true }

# QUIC
url = "2"

# Async stuff
tokio = { version = "1", features = ["full"] }
# tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Web server to serve the fingerprint
axum = { version = "0.7", features = ["tokio"] }
hyper-serve = { version = "0.6", features = [
    "tls-rustls",
] } # fork of axum-server
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File locking
fs2 = "0.4"

# Error handling
anyhow = { version = "1", features = ["backtrace"] }

# CLI
clap = { version = "4", features = ["derive"] }


# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2.0.17"

# Metrics — always compiled in; the metrics crate is effectively zero-cost
# when no recorder is installed (similar to how the log crate works).
# The metrics-prometheus feature adds the optional Prometheus exporter.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", optional = true }

# misc
#once_cell = "1.21.3"

[features]
default = []
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
